--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_html_admin_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_html_admin_alternative.html
@@ -1,87 +1,44 @@
 <#switch template_type>
-
 <#case 0>
 <#if business_class?? >
 <${include} "${admin_feature.featureName?lower_case}_tabs.html" />
 <${macro}tabs tab="${business_class.businessClass?lower_case}" />
 
-<div class="row" >
-    <div class="span12">
-
-    <form class="form-horizontal" method="post" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
-        <fieldset>
-            <legend>${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.tableLabel${i18n_close}</legend>
-
-            <${macro}messages errors=errors />
-            <input type="hidden" id="id" name="id"/>
-            <#list business_class.attributes as attribute>
-            <div class="control-group">
-                <label class="control-label" for="${attribute.paramName}" >${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close} * :</label>
-                <div class="controls">
-                    <input type="text" id="${attribute.paramName}" name="${attribute.paramName}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!''${bra_close}" <#if attribute.maxLength &gt; 0> maxlength="${attribute.maxLength}"</#if> tabindex="${attribute_index}" />
-                    <span class="help-block">${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}</span>
-                </div>
-            </div>
-            </#list>
-            <div class="form-actions">
-                <button name="action_create${business_class.businessClass}" class="btn btn-primary" type="submit" tabindex="${business_class.attributes?size}">
-                    ${i18n_open}portal.util.labelCreate${i18n_close}
-                </button>
-                <button name="view_manage${business_class.businessClass}s" class="btn" type="submit" >
-                    ${i18n_open}portal.util.labelCancel${i18n_close}
-                </button>
-            </div>
-        </fieldset>
+<${macro}rowBoxHeaderBegin i18nTitleKey="${plugin_name}.create_${business_class.businessClass?lower_case}.pageTitle" />
+<div class="box-body">
+    <form class="form-horizontal" method="post" name="create_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
+        <${macro}messages errors=errors />
+        <input type="hidden" id="id" name="id"/>
+        
+        <#list business_class.attributes as attribute>
+        <${macro}fieldInputText i18nLabelKey="${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}" inputName="${attribute.paramName}" <#if attribute.notNull>mandatory=true</#if> value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!''${bra_close}" i18nHelpBlockKey="${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help" />
+        </#list>
+        <${macro}actionButtons button1Name="action_create${business_class.businessClass}" button2Name="view_manage${business_class.businessClass}s"/>
     </form>
-    </div>
 </div>
+<${macro}rowBoxEnd />
 </#if>  
 <#break>
-
 <#case 1>
 <#if business_class?? >
 <${include} "${admin_feature.featureName?lower_case}_tabs.html" />
 <${macro}tabs tab="${business_class.businessClass?lower_case}" />
 
-<div class="row" >
-    <div class="span12">
-
-    <form class="form-horizontal" method="post" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
-        <fieldset>
-            <legend>${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.tableLabel${i18n_close}</legend>
-
-            <${macro}messages errors=errors />
-            
-            <input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
-            
-            <#list business_class.attributes as attribute>
-            <div class="control-group">
-                <label class="control-label" for="${attribute.paramName}" >${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close} * :</label>
-                <div class="controls">
-                    <input type="text" id="${attribute.paramName}" name="${attribute.paramName}" <#if attribute.maxLength &gt; 0> maxlength="${attribute.maxLength}"</#if> value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}" tabindex="1" />
-                    <span class="help-block">${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}</span>
-                </div>
-            </div>
-            </#list>
-
-
-            <div class="form-actions">   
-                <button name="action_modify${business_class.businessClass}" class="btn btn-primary" type="submit" tabindex="${business_class.attributes?size}" >
-                    ${i18n_open}portal.util.labelModify${i18n_close}
-                </button>
-                <button name="view_manage${business_class.businessClass}s" class="btn" type="submit" >
-                    ${i18n_open}portal.util.labelCancel${i18n_close}
-                </button>	
-            </div>
-
-        </fieldset>
+<${macro}rowBoxHeaderBegin i18nTitleKey="${plugin_name}.modify_${business_class.businessClass?lower_case}.pageTitle" />
+<div class="box-body">
+    <form class="form-horizontal" method="post" name="modify_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
+        <${macro}messages errors=errors />
+        <input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
+        
+        <#list business_class.attributes as attribute>
+        <${macro}fieldInputText i18nLabelKey="${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}" inputName="${attribute.paramName}" <#if attribute.notNull>mandatory=true</#if> value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}" i18nHelpBlockKey="${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}.help" />
+        </#list>
+        <${macro}actionButtons button1Name="action_modify${business_class.businessClass}" button2Name="view_manage${business_class.businessClass}s"/>
     </form>
-    </div>  
-
 </div>
+<${macro}rowBoxEnd />
 </#if>
 <#break>
-
 <#case 2>
 <#if business_class?? > 
 <${include} "${admin_feature.featureName?lower_case}_tabs.html" />
@@ -91,14 +48,12 @@
     <div class="span12">
 
         <${macro}messages infos=infos />
-
-        <form method="post"  action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
-            <button name="view_create${business_class.businessClass}" class="btn btn-primary pull-right" type="submit">
-                <i class="icon-plus icon-white"></i>
-                ${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.buttonAdd${i18n_close}
-            </button>
+        
+        <form class="form-horizontal" method="post" name="manage_${business_class.businessClass?lower_case}s" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
+            <!-- Add pull-right to class1 -->
+            <${macro}actionButtons button1Name="view_create${business_class.businessClass}" icon1="icon-plus icon-white" i18nValue1Key="${plugin_name}.manage_${business_class.businessClass?lower_case}s.buttonAdd" />
         </form>
-
+        
     <h4>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.tableLabel${i18n_close}</h4>    
 
     <${macro}paginationAdmin paginator=paginator combo=1 />
@@ -138,11 +93,8 @@
 
     </div>
 </div>
-
 </#if>  
 <#break>
-
-
 <#default>
 </#switch>  
 
