--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_html_admin_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_html_admin_alternative.html
@@ -4,8 +4,7 @@
 <${include} "${admin_feature.featureName?lower_case}_tabs.html" />
 <${macro}tabs tab="${business_class.businessClass?lower_case}" />
 
-<${macro}rowBoxHeaderBegin i18nTitleKey="${plugin_name}.create_${business_class.businessClass?lower_case}.pageTitle" />
-<div class="box-body">
+<${macro}rowBoxHeader i18nTitleKey="${plugin_name}.create_${business_class.businessClass?lower_case}.pageTitle">
     <form class="form-horizontal" method="post" name="create_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
         <${macro}messages errors=errors />
         <input type="hidden" id="id" name="id"/>
@@ -15,8 +14,7 @@
         </#list>
         <${macro}actionButtons button1Name="action_create${business_class.businessClass}" button2Name="view_manage${business_class.businessClass}s"/>
     </form>
-</div>
-<${macro}rowBoxEnd />
+</${macro}rowBoxHeader>
 </#if>  
 <#break>
 <#case 1>
@@ -24,8 +22,7 @@
 <${include} "${admin_feature.featureName?lower_case}_tabs.html" />
 <${macro}tabs tab="${business_class.businessClass?lower_case}" />
 
-<${macro}rowBoxHeaderBegin i18nTitleKey="${plugin_name}.modify_${business_class.businessClass?lower_case}.pageTitle" />
-<div class="box-body">
+<${macro}rowBoxHeader i18nTitleKey="${plugin_name}.modify_${business_class.businessClass?lower_case}.pageTitle">
     <form class="form-horizontal" method="post" name="modify_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
         <${macro}messages errors=errors />
         <input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
@@ -35,8 +32,7 @@
         </#list>
         <${macro}actionButtons button1Name="action_modify${business_class.businessClass}" button2Name="view_manage${business_class.businessClass}s"/>
     </form>
-</div>
-<${macro}rowBoxEnd />
+</${macro}rowBoxHeader>
 </#if>
 <#break>
 <#case 2>
@@ -44,21 +40,23 @@
 <${include} "${admin_feature.featureName?lower_case}_tabs.html" />
 <${macro}tabs tab="${business_class.businessClass?lower_case}" />
 
-<div class="row-fluid" >
-    <div class="span12">
+<${macro}rowBox>
+    <${macro}boxHeader i18nTitleKey="${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.tableLabel${i18n_close}">
+        <${macro}headerButtons>
 
         <${macro}messages infos=infos />
         
-        <form class="form-horizontal" method="post" name="manage_${business_class.businessClass?lower_case}s" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
+        <form class="form-inline pull-right" method="post" name="manage_${business_class.businessClass?lower_case}s" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
             <!-- Add pull-right to class1 -->
             <${macro}actionButtons button1Name="view_create${business_class.businessClass}" icon1="icon-plus icon-white" i18nValue1Key="${plugin_name}.manage_${business_class.businessClass?lower_case}s.buttonAdd" />
         </form>
         
-    <h4>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.tableLabel${i18n_close}</h4>    
-
+    </${macro}headerButtons>
+    </${macro}boxHeader>
+    <${macro}boxBody>    
     <${macro}paginationAdmin paginator=paginator combo=1 />
     
-    <table class="table table-condensed table-striped">
+    <${macro}table>
         <tr>
             <input type="hidden" id="id" name="id"/>
             <#list business_class.attributes as attribute>
@@ -66,6 +64,7 @@
             </#list>
             <th>${i18n_open}portal.util.labelActions${i18n_close}</th>
         </tr>
+        <${macro}tableHeadBodySeparator />
             <${variable}list ${business_class.businessClass?lower_case}_list as ${business_class.businessClass?lower_case} >
         <tr>
             <input type="hidden" id="id" name="id"/>
@@ -87,12 +86,12 @@
         </td>
         </tr>
         </${variable}list>
-    </table>
+    </${macro}table>
 
     <${macro}paginationAdmin paginator=paginator />
 
-    </div>
-</div>
+  </${macro}boxBody>
+</${macro}rowBox>
 </#if>  
 <#break>
 <#default>
